Closed
Bug 515885
Opened 13 years ago
Closed 13 years ago
"Assertion failure: !scope->owned(), at ../jsobj.cpp"
Categories
(Core :: JavaScript Engine, defect, P2)
Tracking
()
VERIFIED
FIXED
Tracking | Status | |
---|---|---|
status1.9.2 | --- | beta5-fixed |
People
(Reporter: gkw, Assigned: jorendorff)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
1.53 KB,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
for (a in (function () { return (x for (x in [function(){}])) })()) ++b asserts js debug shell without -j on TM branch at Assertion failure: !scope->owned(), at ../jsobj.cpp:2615
Flags: blocking1.9.2?
![]() |
Reporter | |
Comment 1•13 years ago
|
||
autoBisect shows this is probably related to bug 511728: The first bad revision is: changeset: 32189:297db27579ca user: Jason Orendorff date: Wed Sep 09 15:53:37 2009 -0500 summary: Bug 511728 - Misc. cleanup from bug 503080. r=igor.
Blocks: 511728
Comment 2•13 years ago
|
||
Since this is only on trunk and doesn't affect 1.9.2, this will not block 1.9.2.
Flags: blocking1.9.2? → blocking1.9.2-
![]() |
Reporter | |
Comment 3•13 years ago
|
||
(In reply to comment #2) > Since this is only on trunk and doesn't affect 1.9.2, this will not block > 1.9.2. Weird - the fingered bug landed on 1.9.2, so is this really still not blocking?
Comment 4•13 years ago
|
||
that was true when Damon wrote it. why did you nominate it for 1.9.2 when you found it?
Flags: blocking1.9.2- → blocking1.9.2+
![]() |
Reporter | |
Comment 5•13 years ago
|
||
(In reply to comment #4) > that was true when Damon wrote it. why did you nominate it for 1.9.2 when you > found it? I made a mistake. :( Apologies.
Comment 6•13 years ago
|
||
(In reply to comment #5) > (In reply to comment #4) > > that was true when Damon wrote it. why did you nominate it for 1.9.2 when you > > found it? > > I made a mistake. :( Apologies. no worries, just making sure.
Updated•13 years ago
|
Priority: -- → P2
Assignee | ||
Comment 8•13 years ago
|
||
The top of ComprehensionTail (way outside the context shown in the patch) calls PushLexicalScope regardless of which kind of comprehension we're parsing.
Attachment #408020 -
Flags: review?(brendan)
Comment 9•13 years ago
|
||
Comment on attachment 408020 [details] [diff] [review] v1 Sorry, my bad from the upvar2 patch (right? hard to chase down the offending rev but I think I got it). /be
Attachment #408020 -
Flags: review?(brendan) → review+
Assignee | ||
Comment 10•13 years ago
|
||
http://hg.mozilla.org/tracemonkey/rev/b388d4491981
Flags: in-testsuite+
Whiteboard: fixed-in-tracemonkey
Comment 11•13 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/b388d4491981
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment 12•13 years ago
|
||
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/1b0526ca92e4
status1.9.2:
--- → final-fixed
Comment 13•13 years ago
|
||
These bugs landed after b4 was cut. Moving flag out.
![]() |
Reporter | |
Comment 14•10 years ago
|
||
A type of test for this bug has already been landed because it is already marked in-testsuite+ -> VERIFIED.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•