Bug 515885 - Assertion failure: !scope->owned(), at ../jsobj.cpp. r=brendan.